<?xml version="1.0"?>
<package>
  <name>applanix_bridge</name>
  <version>0.0.8</version>
  <description>
    Contains the adapter node which translates between the Applanix serialized socket
    format and ROS messages. This node is implemented in Python for now, but could be
    re-implemented using roscpp if performance is a bottleneck.
  </description>

  <maintainer email="kshehata@clearpathrobotics.com">Kareem Shehata</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/applanix_bridge</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>applanix_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>geometry</run_depend>
  <run_depend>geodesy</run_depend>
  <run_depend>applanix_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <test_depend>python-impacket</test_depend>
  <test_depend>python-pcapy</test_depend>

</package>
