<?xml version="1.0"?>
<package>
  <name>applanix_driver</name>
  <version>0.0.0</version>
  <description>
    Comprehensive ROS interface to Applanix POS LV products
  </description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/applanix_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>