<?xml version="1.0"?>
<package>
  <name>applanix_driver</name>
  <version>0.0.3</version>
  <description>
    Comprehensive ROS interface to Applanix POS LV products
  </description>

  <maintainer email="kshehata@clearpathrobotics.com">Kareem Shehata</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/applanix_driver</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>applanix_bridge</run_depend>

  <export>
    <metapackage/>
  </export>
</package>