<?xml version="1.0"?>
<package>
  <name>applanix_msgs</name>
  <version>0.0.6</version>
  <description>
    ROS messages which represent the serialized wire messages and groups of Applanix devices.
  </description>

  <maintainer email="kshehata@clearpathrobotics.com">Kareem Shehata</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/applanix_msgs</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>