<?xml version="1.0"?>
<package>
  <name>applanix_srvs</name>
  <version>0.0.0</version>
  <description>
    Generated services for interacting with an Applanix POS LV
  </description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/applanix_srvs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>applanix_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>applanix_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>

</package>